* The xymonclient.cfg file now references /etc/{default,sysconfig}/xymon-client
  files (if present) to allow for defaults (such as client destination) to 
  be modified there.
* The xymonserver.cfg file now presupposes that it's running in a xymoncmd-
  or xymonlaunch-configured context, and that variables like $MACHINEDOTS are
  already set.
* xymonnet: support a --bfq/--no-bfq option for automatically sensing the
  presence of a feedback queue when running on a xymond server

* FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
  write) to xymonnet
* FIXME-doc: Add hidden tunables for controlling flushing to the external 
  RRD processor. Set RRD_EXTPROC_DOFLUSH to flush after every processed 
  message (which could be multiple lines). Set RRD_EXTPROC_BUFSIZ to 
  control buffer size (similar to BUFSIZ)
* FIXME-doc: Experimental support for rrdcached (requires rrdtoool 1.5 
  or higher) (Thanks, Martin Sperl)
* FIXME-doc: xymond_rrd: Add --flushtimeout option and reduce the 
  frequency of cachectl, zombie, and extcombo flushing

* Experimental support for buiding libxymon as a shared library
  has been improved. Note: As a private library, there are no immediate
  plans for ABI stability or a versioned SONAME

* The first line of a status message (beginning at the color indicator) 
  is now limited to 255 characters
* Performance optimizations / bug fixes with POSIX btree usage
* Performance improvements within xymond_rrd
* Cache various buffer sizes for channel messages instead of re-calculating
* Convert various size variables to size_t throughout
* Add error handling to recover when messages greater than the internal 
  MAX BUF size are found (must delete to not be wedged)
* Add better reporting for sendmessage() failures
* More verbose debugging in message processing, cookie searching, and in 
  core library routines
* xymonlaunch: Improve logging for actions taken against tasks
  tasks (ie, for log rotation)