@@ -63,6 +63,9 @@ const static struct {
 	{ "PAGELEVELS", "red yellow purple" },
 	{ "PURPLEDELAY", "30" },
 	{ "XYMONLOGSTATUS", "DYNAMIC" },
+	{ "XYMONDTCPINTERVAL", "1" },
+	{ "MAXACCEPTSPERLOOP", "20" },
+	{ "BFQCHUNKSIZE", "50" },
 	{ "PINGCOLUMN", "conn" },
 	{ "INFOCOLUMN", "info" },
 	{ "TRENDSCOLUMN", "trends" },
